7065535: Mistyped function name that disabled UseLargePages on Windows

Missing suffix "A" of Windows API LookupPrivilegeValue failed finding function pointer, caused VM to disable UseLargePages option

Reviewed-by: coleenp, phh